# recursiveFileComparator

./: CMakeLists.txt  README.md
src/: FileComparator.cpp  FileComparator.h  PathReader.cpp  PathReader.h  main.cpp
src/useless/: FilePathReader.cpp  FilePathReader.h
